--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Welcome to Developer Hub</title>
     <script src="https://kit.fontawesome.com/2e30afed2d.js" crossorigin="anonymous"></script>
+    <script src="/pace/pace.js"></script>
+    <link href="/pace/themes/minimal.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
