--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
     <title>Welcome to Developer Hub</title>
     <script src="https://kit.fontawesome.com/2e30afed2d.js" crossorigin="anonymous"></script>
     <script src="/pace/pace.js"></script>
-    <link href="/pace/themes/minimal.css" rel="stylesheet" />
+    <link href="/pace/themes/flash.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
