--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created by Debmalya Paine"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Welcome to Developer Hub</title>
+    <title>Welcome to TechConnect</title>
     <script src="https://kit.fontawesome.com/2e30afed2d.js" crossorigin="anonymous"></script>
     <script src="/pace/pace.js"></script>
     <link href="/pace/themes/flash.css" rel="stylesheet" />
